Fix multiplexed connection and status request